src/me/dsnet/cetriolo/antlr/output/GherkinParser.java
// $ANTLR 3.x C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g 2012-12-17 17:26:09
package me.dsnet.cetriolo.antlr.output;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;

@SuppressWarnings("all")
public class GherkinParser extends Parser {

    public static final String[] tokenNames = new String[]{
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "DOCSTR", "EXAMPLE", "FEATURE", "FEAT_KEY", "NL", "NUMBER", "PHOLDER", "SCENARIO", "SCEN_OUT", "STEP_KEY", "STRING", "TAGNAME", "T_ROW", "WORD", "WS"
    };
    public static final int EOF = -1;
    public static final int COMMENT = 4;
    public static final int DOCSTR = 5;
    public static final int EXAMPLE = 6;
    public static final int FEATURE = 7;
    public static final int FEAT_KEY = 8;
    public static final int NL = 9;
    public static final int NUMBER = 10;
    public static final int PHOLDER = 11;
    public static final int SCENARIO = 12;
    public static final int SCEN_OUT = 13;
    public static final int STEP_KEY = 14;
    public static final int STRING = 15;
    public static final int TAGNAME = 16;
    public static final int T_ROW = 17;
    public static final int WORD = 18;
    public static final int WS = 19;
    
    

    // delegates
    public Parser[] getDelegates() {
        return new Parser[]{};
    }

    // delegators
    public GherkinParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public GherkinParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }

    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    @Override
    public String[] getTokenNames() {
        return GherkinParser.tokenNames;
    }

    @Override
    public String getGrammarFileName() {
        return "C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g";
    }
    public List<SyntaxError> syntaxErrors = new ArrayList<SyntaxError>();

    @Override
    public String getErrorMessage(RecognitionException ex, String[] tokenNames) {
        String message = super.getErrorMessage(ex, tokenNames);
        SyntaxError.ErrorType type= null;
        StackTraceElement firstelem = ex.getStackTrace()[0];
        String methodName= firstelem.getMethodName();
        ex.printStackTrace();
        
        
        if(ex instanceof NoViableAltException){
            NoViableAltException e = (NoViableAltException)ex;
            String grammarDesc = e.grammarDecisionDescription;
            if(grammarDesc.contains("scenario | scenario_outline")){
                type=SyntaxError.ErrorType.NOT_VIABLE_SCENARIO;
            }else if(grammarDesc.contains(" step ")){
                type=SyntaxError.ErrorType.NOT_VIABLE_FEATURE;
            }      
        }else if(ex instanceof MismatchedTokenException){
            type=SyntaxError.ErrorType.MISMATCHED_FEATURE;
        }else if(methodName!=null){
            System.out.println("stack trace: " + methodName);
            if(methodName.equals("feature")){
                type=SyntaxError.ErrorType.MISSING_SCENARIO;
            }else if (methodName.equals("scenario")){
                type=SyntaxError.ErrorType.MISSING_STEP;
            }else if (methodName.equals("title")){
                type=SyntaxError.ErrorType.MISSING_TITLE;
            }else if (methodName.equals("stepdesc")){
                type=SyntaxError.ErrorType.MISSING_STEP_DESC;
            }
        }       
        syntaxErrors.add(new SyntaxError(ex,message,type));
        return message;
    }


    public static class feature_return extends ParserRuleReturnScope {

        Object tree;

        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "feature"
    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:34:1: feature : ( NL )* ( tag )* FEATURE title ( NL )+ ( narrative )? ( scenario | scenario_outline )+ ;
    public final GherkinParser.feature_return feature() throws RecognitionException {
        GherkinParser.feature_return retval = new GherkinParser.feature_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NL1 = null;
        Token FEATURE3 = null;
        Token NL5 = null;
        ParserRuleReturnScope tag2 = null;
        ParserRuleReturnScope title4 = null;
        ParserRuleReturnScope narrative6 = null;
        ParserRuleReturnScope scenario7 = null;
        ParserRuleReturnScope scenario_outline8 = null;

        Object NL1_tree = null;
        Object FEATURE3_tree = null;
        Object NL5_tree = null;

        try {
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:34:9: ( ( NL )* ( tag )* FEATURE title ( NL )+ ( narrative )? ( scenario | scenario_outline )+ )
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:34:11: ( NL )* ( tag )* FEATURE title ( NL )+ ( narrative )? ( scenario | scenario_outline )+
            {
                root_0 = (Object) adaptor.nil();


                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:34:11: ( NL )*
                loop1:
                do {
                    int alt1 = 2;
                    int LA1_0 = input.LA(1);
                    if ((LA1_0 == NL)) {
                        alt1 = 1;
                    }

                    switch (alt1) {
                        case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:34:11: NL
                        {
                            NL1 = (Token) match(input, NL, FOLLOW_NL_in_feature44);
                            NL1_tree =
                                    (Object) adaptor.create(NL1);
                            adaptor.addChild(root_0, NL1_tree);

                        }
                        break;

                        default:
                            break loop1;
                    }
                } while (true);

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:35:11: ( tag )*
                loop2:
                do {
                    int alt2 = 2;
                    int LA2_0 = input.LA(1);
                    if ((LA2_0 == TAGNAME)) {
                        alt2 = 1;
                    }

                    switch (alt2) {
                        case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:35:11: tag
                        {
                            pushFollow(FOLLOW_tag_in_feature57);
                            tag2 = tag();
                            state._fsp--;

                            adaptor.addChild(root_0, tag2.getTree());

                        }
                        break;

                        default:
                            break loop2;
                    }
                } while (true);

                FEATURE3 = (Token) match(input, FEATURE, FOLLOW_FEATURE_in_feature63);
                FEATURE3_tree =
                        (Object) adaptor.create(FEATURE3);
                adaptor.addChild(root_0, FEATURE3_tree);

                pushFollow(FOLLOW_title_in_feature76);
                title4 = title();
                state._fsp--;

                adaptor.addChild(root_0, title4.getTree());

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:37:17: ( NL )+
                int cnt3 = 0;
                loop3:
                do {
                    int alt3 = 2;
                    int LA3_0 = input.LA(1);
                    if ((LA3_0 == NL)) {
                        alt3 = 1;
                    }

                    switch (alt3) {
                        case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:37:17: NL
                        {
                            NL5 = (Token) match(input, NL, FOLLOW_NL_in_feature78);
                            NL5_tree =
                                    (Object) adaptor.create(NL5);
                            adaptor.addChild(root_0, NL5_tree);

                        }
                        break;

                        default:
                            if (cnt3 >= 1) {
                                break loop3;
                            }
                            EarlyExitException eee =
                                    new EarlyExitException(3, input);
                            throw eee;
                    }
                    cnt3++;
                } while (true);

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:38:11: ( narrative )?
                int alt4 = 2;
                int LA4_0 = input.LA(1);
                if ((LA4_0 == FEAT_KEY || (LA4_0 >= NUMBER && LA4_0 <= PHOLDER) || LA4_0 == STRING || LA4_0 == WORD)) {
                    alt4 = 1;
                }
                switch (alt4) {
                    case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:38:11: narrative
                    {
                        pushFollow(FOLLOW_narrative_in_feature91);
                        narrative6 = narrative();
                        state._fsp--;

                        adaptor.addChild(root_0, narrative6.getTree());

                    }
                    break;

                }

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:39:11: ( scenario | scenario_outline )+
                int cnt5 = 0;
                loop5:
                do {
                    int alt5 = 3;
                    alt5 = dfa5.predict(input);
                    switch (alt5) {
                        case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:39:12: scenario
                        {
                            pushFollow(FOLLOW_scenario_in_feature105);
                            scenario7 = scenario();
                            state._fsp--;

                            adaptor.addChild(root_0, scenario7.getTree());

                        }
                        break;
                        case 2: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:39:21: scenario_outline
                        {
                            pushFollow(FOLLOW_scenario_outline_in_feature107);
                            scenario_outline8 = scenario_outline();
                            state._fsp--;

                            adaptor.addChild(root_0, scenario_outline8.getTree());

                        }
                        break;

                        default:
                            if (cnt5 >= 1) {
                                break loop5;
                            }
                            EarlyExitException eee =
                                    new EarlyExitException(5, input);
                            throw eee;
                    }
                    cnt5++;
                } while (true);

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {      
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "feature"

    public static class scenario_return extends ParserRuleReturnScope {

        Object tree;

        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "scenario"
    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:42:1: scenario : ( NL )* ( tag )* SCENARIO ( title )? ( NL )+ ( narrative )? ( step )+ ;
    public final GherkinParser.scenario_return scenario() throws RecognitionException {
        GherkinParser.scenario_return retval = new GherkinParser.scenario_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NL9 = null;
        Token SCENARIO11 = null;
        Token NL13 = null;
        ParserRuleReturnScope tag10 = null;
        ParserRuleReturnScope title12 = null;
        ParserRuleReturnScope narrative14 = null;
        ParserRuleReturnScope step15 = null;

        Object NL9_tree = null;
        Object SCENARIO11_tree = null;
        Object NL13_tree = null;

        try {
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:42:9: ( ( NL )* ( tag )* SCENARIO ( title )? ( NL )+ ( narrative )? ( step )+ )
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:42:11: ( NL )* ( tag )* SCENARIO ( title )? ( NL )+ ( narrative )? ( step )+
            {
                root_0 = (Object) adaptor.nil();


                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:42:11: ( NL )*
                loop6:
                do {
                    int alt6 = 2;
                    int LA6_0 = input.LA(1);
                    if ((LA6_0 == NL)) {
                        alt6 = 1;
                    }

                    switch (alt6) {
                        case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:42:11: NL
                        {
                            NL9 = (Token) match(input, NL, FOLLOW_NL_in_scenario135);
                            NL9_tree =
                                    (Object) adaptor.create(NL9);
                            adaptor.addChild(root_0, NL9_tree);

                        }
                        break;

                        default:
                            break loop6;
                    }
                } while (true);

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:43:11: ( tag )*
                loop7:
                do {
                    int alt7 = 2;
                    int LA7_0 = input.LA(1);
                    if ((LA7_0 == TAGNAME)) {
                        alt7 = 1;
                    }

                    switch (alt7) {
                        case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:43:11: tag
                        {
                            pushFollow(FOLLOW_tag_in_scenario148);
                            tag10 = tag();
                            state._fsp--;

                            adaptor.addChild(root_0, tag10.getTree());

                        }
                        break;

                        default:
                            break loop7;
                    }
                } while (true);

                SCENARIO11 = (Token) match(input, SCENARIO, FOLLOW_SCENARIO_in_scenario154);
                SCENARIO11_tree =
                        (Object) adaptor.create(SCENARIO11);
                adaptor.addChild(root_0, SCENARIO11_tree);

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:45:4: ( title )?
                int alt8 = 2;
                int LA8_0 = input.LA(1);
                if (((LA8_0 >= NUMBER && LA8_0 <= PHOLDER) || LA8_0 == STRING || LA8_0 == WORD)) {
                    alt8 = 1;
                }
                switch (alt8) {
                    case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:45:4: title
                    {
                        pushFollow(FOLLOW_title_in_scenario159);
                        title12 = title();
                        state._fsp--;

                        adaptor.addChild(root_0, title12.getTree());

                    }
                    break;

                }

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:45:11: ( NL )+
                int cnt9 = 0;
                loop9:
                do {
                    int alt9 = 2;
                    int LA9_0 = input.LA(1);
                    if ((LA9_0 == NL)) {
                        alt9 = 1;
                    }

                    switch (alt9) {
                        case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:45:11: NL
                        {
                            NL13 = (Token) match(input, NL, FOLLOW_NL_in_scenario162);
                            NL13_tree =
                                    (Object) adaptor.create(NL13);
                            adaptor.addChild(root_0, NL13_tree);

                        }
                        break;

                        default:
                            if (cnt9 >= 1) {
                                break loop9;
                            }
                            EarlyExitException eee =
                                    new EarlyExitException(9, input);
                            throw eee;
                    }
                    cnt9++;
                } while (true);

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:46:4: ( narrative )?
                int alt10 = 2;
                int LA10_0 = input.LA(1);
                if ((LA10_0 == FEAT_KEY || (LA10_0 >= NUMBER && LA10_0 <= PHOLDER) || LA10_0 == STRING || LA10_0 == WORD)) {
                    alt10 = 1;
                }
                switch (alt10) {
                    case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:46:4: narrative
                    {
                        pushFollow(FOLLOW_narrative_in_scenario168);
                        narrative14 = narrative();
                        state._fsp--;

                        adaptor.addChild(root_0, narrative14.getTree());

                    }
                    break;

                }

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:47:4: ( step )+
                int cnt11 = 0;
                loop11:
                do {
                    int alt11 = 2;
                    alt11 = dfa11.predict(input);
                    switch (alt11) {
                        case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:47:4: step
                        {
                            pushFollow(FOLLOW_step_in_scenario174);
                            step15 = step();
                            state._fsp--;

                            adaptor.addChild(root_0, step15.getTree());

                        }
                        break;

                        default:
                            if (cnt11 >= 1) {
                                break loop11;
                            }
                            EarlyExitException eee =
                                    new EarlyExitException(11, input);
                            throw eee;
                    }
                    cnt11++;
                } while (true);

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {     
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "scenario"

    public static class scenario_outline_return extends ParserRuleReturnScope {

        Object tree;

        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "scenario_outline"
    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:50:1: scenario_outline : ( NL )* ( tag )* SCEN_OUT ( title )? ( NL )+ ( narrative )? ( step )* ( examples )* ;
    public final GherkinParser.scenario_outline_return scenario_outline() throws RecognitionException {
        GherkinParser.scenario_outline_return retval = new GherkinParser.scenario_outline_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NL16 = null;
        Token SCEN_OUT18 = null;
        Token NL20 = null;
        ParserRuleReturnScope tag17 = null;
        ParserRuleReturnScope title19 = null;
        ParserRuleReturnScope narrative21 = null;
        ParserRuleReturnScope step22 = null;
        ParserRuleReturnScope examples23 = null;

        Object NL16_tree = null;
        Object SCEN_OUT18_tree = null;
        Object NL20_tree = null;

        try {
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:51:2: ( ( NL )* ( tag )* SCEN_OUT ( title )? ( NL )+ ( narrative )? ( step )* ( examples )* )
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:51:4: ( NL )* ( tag )* SCEN_OUT ( title )? ( NL )+ ( narrative )? ( step )* ( examples )*
            {
                root_0 = (Object) adaptor.nil();


                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:51:4: ( NL )*
                loop12:
                do {
                    int alt12 = 2;
                    int LA12_0 = input.LA(1);
                    if ((LA12_0 == NL)) {
                        alt12 = 1;
                    }

                    switch (alt12) {
                        case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:51:4: NL
                        {
                            NL16 = (Token) match(input, NL, FOLLOW_NL_in_scenario_outline187);
                            NL16_tree =
                                    (Object) adaptor.create(NL16);
                            adaptor.addChild(root_0, NL16_tree);

                        }
                        break;

                        default:
                            break loop12;
                    }
                } while (true);

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:52:11: ( tag )*
                loop13:
                do {
                    int alt13 = 2;
                    int LA13_0 = input.LA(1);
                    if ((LA13_0 == TAGNAME)) {
                        alt13 = 1;
                    }

                    switch (alt13) {
                        case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:52:11: tag
                        {
                            pushFollow(FOLLOW_tag_in_scenario_outline200);
                            tag17 = tag();
                            state._fsp--;

                            adaptor.addChild(root_0, tag17.getTree());

                        }
                        break;

                        default:
                            break loop13;
                    }
                } while (true);

                SCEN_OUT18 = (Token) match(input, SCEN_OUT, FOLLOW_SCEN_OUT_in_scenario_outline206);
                SCEN_OUT18_tree =
                        (Object) adaptor.create(SCEN_OUT18);
                adaptor.addChild(root_0, SCEN_OUT18_tree);

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:54:4: ( title )?
                int alt14 = 2;
                int LA14_0 = input.LA(1);
                if (((LA14_0 >= NUMBER && LA14_0 <= PHOLDER) || LA14_0 == STRING || LA14_0 == WORD)) {
                    alt14 = 1;
                }
                switch (alt14) {
                    case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:54:4: title
                    {
                        pushFollow(FOLLOW_title_in_scenario_outline211);
                        title19 = title();
                        state._fsp--;

                        adaptor.addChild(root_0, title19.getTree());

                    }
                    break;

                }

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:54:11: ( NL )+
                int cnt15 = 0;
                loop15:
                do {
                    int alt15 = 2;
                    int LA15_0 = input.LA(1);
                    if ((LA15_0 == NL)) {
                        alt15 = 1;
                    }

                    switch (alt15) {
                        case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:54:11: NL
                        {
                            NL20 = (Token) match(input, NL, FOLLOW_NL_in_scenario_outline214);
                            NL20_tree =
                                    (Object) adaptor.create(NL20);
                            adaptor.addChild(root_0, NL20_tree);

                        }
                        break;

                        default:
                            if (cnt15 >= 1) {
                                break loop15;
                            }
                            EarlyExitException eee =
                                    new EarlyExitException(15, input);
                            throw eee;
                    }
                    cnt15++;
                } while (true);

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:55:4: ( narrative )?
                int alt16 = 2;
                int LA16_0 = input.LA(1);
                if ((LA16_0 == FEAT_KEY || (LA16_0 >= NUMBER && LA16_0 <= PHOLDER) || LA16_0 == STRING || LA16_0 == WORD)) {
                    alt16 = 1;
                }
                switch (alt16) {
                    case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:55:4: narrative
                    {
                        pushFollow(FOLLOW_narrative_in_scenario_outline220);
                        narrative21 = narrative();
                        state._fsp--;

                        adaptor.addChild(root_0, narrative21.getTree());

                    }
                    break;

                }

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:56:4: ( step )*
                loop17:
                do {
                    int alt17 = 2;
                    alt17 = dfa17.predict(input);
                    switch (alt17) {
                        case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:56:4: step
                        {
                            pushFollow(FOLLOW_step_in_scenario_outline226);
                            step22 = step();
                            state._fsp--;

                            adaptor.addChild(root_0, step22.getTree());

                        }
                        break;

                        default:
                            break loop17;
                    }
                } while (true);

                // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:57:4: ( examples )*
                loop18:
                do {
                    int alt18 = 2;
                    alt18 = dfa18.predict(input);
                    switch (alt18) {
                        case 1: // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:57:4: examples
                        {
                            pushFollow(FOLLOW_examples_in_scenario_outline232);
                            examples23 = examples();
                            state._fsp--;

                            adaptor.addChild(root_0, examples23.getTree());

                        }
                        break;

                        default:
                            break loop18;
                    }
                } while (true);

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "scenario_outline"

    public static class examples_return extends ParserRuleReturnScope {

        Object tree;

        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "examples"
    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:60:1: examples : ( NL )* EXAMPLE ( title )? ( NL )+ ( narrative )? table ;
    public final GherkinParser.examples_return examples() throws RecognitionException {
        GherkinParser.examples_return retval = new GherkinParser.examples_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NL24 = null;
        Token EXAMPLE25 = null;
        Token NL27 = null;
        ParserRuleReturnScope title26 = null;
        ParserRuleReturnScope narrative28 = null;
        ParserRuleReturnScope table29 = null;

        Object NL24_tree = null;
        Object EXAMPLE25_tree = null;
        Object NL27_tree = null;

        try {
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:60:9: ( ( NL )* EXAMPLE ( title )? ( NL )+ ( narrative )? table )
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:60:11: ( NL )* EXAMPLE ( title )? ( NL )+ ( narrative )? table
